# IDEC-TAK

./: README.md  config.yaml.example  instructions.md  pyproject.toml
aprs_tak_gateway/: __init__.py  aprs_parser.py  aprsis.py  config.py  cot.py  dedupe.py  direwolf_agw.py  main.py  roster.py  tak_client.py  web.py
aprs_tak_gateway/templates/: base.html  filter.html  index.html  login.html  user_form.html
systemd/: aprs-tak-gateway.service  aprs-tak-web.service
tests/: test_aprs_parser.py  test_cot.py  test_direwolf_agw.py  test_filter_generation.py  test_roster.py  test_web.py
