[project]
name = "aprs-tak-gateway"
version = "0.1.0"
description = "APRS-to-TAK gateway service for RF APRS and APRS-IS packets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "fastapi>=0.105.0",
  "uvicorn[standard]>=0.24.0",
  "aiosqlite>=0.18.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.6"
]

[project.optional-dependencies]
test = ["pytest>=8.0","pytest-asyncio>=0.22.0"]

[project.scripts]
aprs-tak-gateway = "aprs_tak_gateway.main:main"
